<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8GX-Hv-K7y">
    <device id="retina5_9" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="UgG-ty-lkB">
            <objects>
                <tableViewController id="FyR-9u-468" customClass="ViewController" customModule="Example" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="T9t-83-Dbh">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="724"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DeviceiOSCell" rowHeight="60" id="LDJ-ny-tU7" customClass="DeviceiOSCell" customModule="Example" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="28" width="375" height="60"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LDJ-ny-tU7" id="7BD-qe-hrU">
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="📱" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LB9-hy-SvO">
                                            <rect key="frame" x="15" y="11" width="34" height="36"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ye3-08-H2W">
                                            <rect key="frame" x="57" y="19" width="303" height="21"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                    </subviews>
                                </tableViewCellContentView>
                                <connections>
                                    <outlet property="nameLabel" destination="ye3-08-H2W" id="Edr-nb-o3i"/>
                                </connections>
                            </tableViewCell>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DeviceAndroidCell" rowHeight="60" id="yOJ-vK-HYr" customClass="DeviceAndroidCell" customModule="Example" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="88" width="375" height="60"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yOJ-vK-HYr" id="o2u-rF-Oxz">
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="☏" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uKa-Hs-2ga">
                                            <rect key="frame" x="15" y="11" width="26" height="36"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Bf-lE-h7w">
                                            <rect key="frame" x="57" y="19" width="303" height="21"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                    </subviews>
                                </tableViewCellContentView>
                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <connections>
                                    <outlet property="nameLabel" destination="1Bf-lE-h7w" id="Kvw-MW-hm1"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="FyR-9u-468" id="hl1-2I-G1H"/>
                            <outlet property="delegate" destination="FyR-9u-468" id="Y5c-4k-WK2"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" id="9nY-eC-Fus">
                        <rightBarButtonItems>
                            <barButtonItem title="+Android" id="aPE-3X-9Pe">
                                <connections>
                                    <action selector="didTapAddAndroid" destination="FyR-9u-468" id="WwD-1u-OZ3"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="+iPhone" id="O2O-dM-fd0">
                                <connections>
                                    <action selector="didTapAddIPhone" destination="FyR-9u-468" id="BvF-WN-DpQ"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Reset" id="ih0-d8-ZNp">
                                <connections>
                                    <action selector="didTapReset" destination="FyR-9u-468" id="uoi-gB-v5x"/>
                                </connections>
                            </barButtonItem>
                        </rightBarButtonItems>
                    </navigationItem>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="lQH-th-kgz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="689" y="105"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="hCm-4c-gEX">
            <objects>
                <placeholder placeholderIdentifier="IBFirstResponder" id="uLZ-Y8-ApQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
                <navigationController id="8GX-Hv-K7y" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="nRW-KS-UQ3">
                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="FyR-9u-468" kind="relationship" relationship="rootViewController" id="nJs-1k-rIz"/>
                    </connections>
                </navigationController>
            </objects>
            <point key="canvasLocation" x="-213" y="105"/>
        </scene>
    </scenes>
</document>
