...
        let header = PhonesHeaderModel(title: "Cell Phones")

        return EquatableCellModelSection(cells: cellModels, headerView: header, identifier: "Section 1")
    }

    private var welcomeSection: EquatableCellModelSection {
        return [NibTableViewCellModel(text: "Welcome!")]
    }

    private var defaultSections: [EquatableCellModelSection] {
        return [
            welcomeSection,
            phonesSection
...
